force-app/main/default/objects/Inspection_Shop_Plan__c/Inspection_Shop_Plan__c.object-meta.xml
<CustomObject>
    <label>Inspection Plan</label>
    <nameField>
        <displayFormat>ISP-{YYYY}{MM}{0000}</displayFormat>
        <label>计划编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>