force-app/main/default/objects/Inspection_Shop_Plan__c/fields/Approver1__c.field-meta.xml
<CustomField>
    <fullName>Approver1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Plan_Approver1</relationshipName>
    <type>Lookup</type>
</CustomField>