force-app/main/default/objects/Inspection_Shop_Plan__c/fields/Approver2__c.field-meta.xml
<CustomField>
    <fullName>Approver2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Plan_Approver2</relationshipName>
    <type>Lookup</type>
</CustomField>