force-app/main/default/objects/Inspection_Shop_Plan__c/fields/Completion__c.field-meta.xml
<CustomField>
    <fullName>Completion__c</fullName>
    <formula>Visit_Actual__c /Visit_Target__c</formula>
    <label>*Completion</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>