force-app/main/default/objects/Inspection_Shop_Plan__c/fields/Inspection_Month__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Month__c</fullName>
    <defaultValue>TEXT(MONTH( TODAY() ))</defaultValue>
    <label>计划月份</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>