force-app/main/default/objects/Inspection_Shop_Plan__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <label>所有人Id（后台使用）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>