force-app/main/default/objects/Inspection_Shop_Plan__c/fields/Statistical_Month__c.field-meta.xml
<CustomField>
    <fullName>Statistical_Month__c</fullName>
    <formula>TEXT(Inspection_Year__c)  +   IF(  VALUE(TEXT(Inspection_Month__c ))  &lt; 10, &apos;0&apos; +TEXT(Inspection_Month__c ) , TEXT(Inspection_Month__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statistical Month</label>
    <type>Text</type>
</CustomField>