force-app/main/default/objects/Inspection_Shop_Plan__c/fields/Submiter__c.field-meta.xml
<CustomField>
    <fullName>Submiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InspectionShopPlan_Submiter</relationshipName>
    <type>Lookup</type>
</CustomField>