force-app/main/default/objects/Inspection_Shop_Plan__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>任务类型</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Number of Stores</fullName>
                <default>true</default>
                <label>Number of Stores</label>
            </value>
            <value>
                <fullName>Number of Visits</fullName>
            </value>
            <value>
                <fullName>Frequency of Store Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>