force-app/main/default/objects/Inspection_Shop_Plan__c/fields/Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Type_Code__c</fullName>
    <description>任务类型编码</description>
    <label>Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>