force-app/main/default/objects/Inspection_Shop_Plan__c/fields/Visit_Actual__c.field-meta.xml
<CustomField>
    <fullName>Visit_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <description>实际</description>
    <label>*Visit Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>