force-app/main/default/objects/Inspection_Shop_Plan__c/validationRules/MoreThanToday.validationRule-meta.xml
<ValidationRule>
    <fullName>MoreThanToday</fullName>
    <active>false</active>
    <description>创建时只可选择本月或未来月份</description>
    <errorConditionFormula>NOT(
	OR(
		VALUE(TEXT(Inspection_Year__c))&gt;YEAR(ToDay())  , 
		AND(
			YEAR(ToDay()) = VALUE(TEXT(Inspection_Year__c)) ,VALUE(TEXT(Inspection_Month__c)) &gt;= MONTH(ToDay())
		) 
	)
)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>创建时只可选择本月或未来月份</errorMessage>
</ValidationRule>