force-app/main/default/objects/Inspection_Shop_Plan__c/listViews/All_Plans.listView-meta.xml
<ListView>
    <fullName>All_Plans</fullName>
    <columns>NAME</columns>
    <columns>Inspection_Year__c</columns>
    <columns>Inspection_Month__c</columns>
    <columns>Status__c</columns>
    <columns>Sales_Region__c</columns>
    <columns>Submiter__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>Sales_Region__c</field>
        <operation>contains</operation>
        <value>aus</value>
    </filters>
    <label>All</label>
</ListView>