force-app/main/default/objects/Inspection_Shop_Plan__c/listViews/Indonesia_Report.listView-meta.xml
<ListView>
    <fullName>Indonesia_Report</fullName>
    <columns>NAME</columns>
    <columns>Inspection_Year__c</columns>
    <columns>Inspection_Month__c</columns>
    <columns>Status__c</columns>
    <columns>Submiter__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inspection_Year__c</field>
        <operation>equals</operation>
        <value>2023,2024,2025,2026,2027,2028</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>contains</operation>
        <value>Surya,Ikhsan,ARIE,Abdul,Nano,Ary,Endri</value>
    </filters>
    <label>Indonesia Report</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Indonesia_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>