force-app/main/default/objects/Inspection_Shop_Plan__c/listViews/Japan.listView-meta.xml
<ListView>
    <fullName>Japan</fullName>
    <columns>NAME</columns>
    <columns>Inspection_Year__c</columns>
    <columns>Inspection_Month__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense Japan</value>
    </filters>
    <label>Japan</label>
    <sharedTo>
        <roleAndSubordinatesInternal>JP_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>